@startuml

title __ENTITIES's Class Diagram__\n

  namespace orders {
    namespace model.entities {
      class orders.model.entities.ArtOrder {
          - id : int
          - image : String
          + ArtOrder()
          + getCustomer()
          + getId()
          + getImage()
          + getOrderApplication()
          + getOrderStatus()
          + setCustomer()
          + setId()
          + setImage()
          + setOrderApplication()
          + setOrderStatus()
          + toString()
      }
    }
  }
  

  namespace orders {
    namespace model.entities {
      class orders.model.entities.Gallery {
          - id : int
          - link : String
          - site : String
          + Gallery()
          + getId()
          + getLink()
          + getSite()
          + getUser()
          + setId()
          + setLink()
          + setSite()
          + setUser()
          + toString()
      }
    }
  }
  

  namespace orders {
    namespace model.entities {
      class orders.model.entities.OrderApplication {
          - cost : int
          - id : int
          - info : String
          - slots : int
          + OrderApplication()
          + getArtist()
          + getCost()
          + getId()
          + getInfo()
          + getSlots()
          + getStyle()
          + getType()
          + setArtist()
          + setCost()
          + setId()
          + setInfo()
          + setSlots()
          + setStyle()
          + setType()
      }
    }
  }
  

  namespace orders {
    namespace model.entities {
      class orders.model.entities.User {
          - avatar : String
          - id : int
          - info : String
          - isArtist : boolean
          - login : String
          - password : String
          + User()
          + equals()
          + getAvatar()
          + getId()
          + getInfo()
          + getLogin()
          + getPassword()
          + hashCode()
          + isArtist()
          + setArtist()
          + setAvatar()
          + setId()
          + setInfo()
          + setLogin()
          + setPassword()
          + toString()
          - User()
      }
    }
  }
  

  orders.model.entities.ArtOrder o-- orders.model.entities.User : customer
  orders.model.entities.ArtOrder o-- orders.model.entities.OrderApplication : orderApplication
  orders.model.entities.ArtOrder o-- orders.model.enums.OrderStatus : orderStatus
  orders.model.entities.Gallery o-- orders.model.entities.User : user
  orders.model.entities.OrderApplication o-- orders.model.entities.User : artist
  orders.model.entities.OrderApplication o-- orders.model.enums.OrderStyle : style
  orders.model.entities.OrderApplication o-- orders.model.enums.OrderType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
